--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 04 11:10:57 IST 2021
-sdk.dir=C\:\\Users\\SaurabhInfosys2\\AppData\\Local\\Android\\Sdk
+#Fri Aug 27 11:37:39 IST 2021
+sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
