--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 05 12:26:32 IST 2021
-sdk.dir=C\:\\Users\\Arun\\AppData\\Local\\Android\\Sdk
+#Tue Sep 21 18:19:26 IST 2021
+sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
