--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
+        android:value="2"
         android:label="The Press of INDIA"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
