--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  multilevel_drawer: ^1.0.3
+  multilevel_drawer: ^2.0.0
   carousel_slider: ^4.0.0-nullsafety.0
 #  social_media_buttons: ^0.1.2
  # flutter_neumorphic: ^3.0.1
@@ -40,14 +40,14 @@ dependencies:
   flutter_html:
   shared_preferences: ^2.0.5
   share: ^2.0.1
-  firebase_messaging: ^9.1.3
+  firebase_messaging: ^10.0.8
 
   url_launcher: ^6.0.9
-  image_gallery_saver:
+  image_gallery_saver: '^1.7.0'
   pdf: ^3.4.2
   path_provider: ^2.0.2
   permission_handler: ^8.1.4+2
-  flutter_full_pdf_viewer: ^1.0.6
+
   auto_animated: ^3.0.0
   screenshot: ^1.2.3
 
