--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 21 18:19:26 IST 2021
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Fri Oct 08 11:55:43 IST 2021
+sdk.dir=C\:\\Users\\SaurabhInfosys2\\AppData\\Local\\Android\\Sdk
