change some code bcz of this code is in older version

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:value="2"
         android:label="The Press of INDIA"
         android:usesCleartextTraffic="true"
