--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   transparent_image: ^2.0.0
   flutter_html:
   shared_preferences: ^2.0.5
-  share: ^2.0.1
+  share_plus: ^4.0.10
   firebase_messaging: ^10.0.8
 
   url_launcher: ^6.0.9
@@ -51,7 +51,8 @@ dependencies:
   auto_animated: ^3.0.0
   screenshot: ^1.2.3
 
-  gallery_saver: ^2.0.0
+  gallery_saver: ^2.3.2
+
 
 dev_dependencies:
   flutter_test:
