--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,14 @@ dependencies:
   path_provider: ^2.0.2
   permission_handler: ^8.1.4+2
 
-  auto_animated: ^3.0.0
+  auto_animated: ^3.0.1
+
   screenshot: ^1.2.3
 
   gallery_saver: ^2.3.2
+  platform: ^3.1.0
+  visibility_detector: ^0.2.2
+
 
 
 dev_dependencies:
