--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 08 11:55:43 IST 2021
-sdk.dir=C\:\\Users\\SaurabhInfosys2\\AppData\\Local\\Android\\Sdk
+#Wed Aug 03 22:16:15 IST 2022
+sdk.dir=C\:\\Users\\Aurn\\AppData\\Local\\Android\\Sdk
