--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.3+4
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,32 +28,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  multilevel_drawer: ^2.0.0
-  carousel_slider: ^4.0.0-nullsafety.0
+
+  carousel_slider: ^4.2.1
 #  social_media_buttons: ^0.1.2
  # flutter_neumorphic: ^3.0.1
 #  flutter_wordpress: ^0.2.1
-  fluttertoast: ^8.0.6
-  intl: ^0.17.0
-  cached_network_image: ^3.0.0
-  transparent_image: ^2.0.0
-  flutter_html:
+  fluttertoast: ^8.1.2
+  intl: ^0.18.0
+  cached_network_image: ^3.2.3
+
+  flutter_html: ^3.0.0-alpha.6
   shared_preferences: ^2.0.5
   share_plus: ^4.0.10
-  firebase_messaging: ^10.0.8
-
+  firebase_messaging: ^14.2.1
+  firebase_core: ^2.4.1
   url_launcher: ^6.0.9
-  image_gallery_saver: '^1.7.0'
-  pdf: ^3.4.2
-  path_provider: ^2.0.2
-  permission_handler: ^8.1.4+2
 
+
+
+
+  flutter_svg: ^2.0.0+1
   auto_animated: ^3.0.1
 
   screenshot: ^1.2.3
 
-  gallery_saver: ^2.3.2
-  platform: ^3.1.0
+
   visibility_detector: ^0.2.2
 
 
