--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 01 15:05:19 IST 2023
-sdk.dir=/Users/arunprajapati/Library/Android/sdk
+#Tue Feb 28 02:47:31 IST 2023
+sdk.dir=C\:\\Users\\Aurn\\AppData\\Local\\Android\\Sdk
